--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
         <h1>Parsea</h1>
         <div class="subtitle">A tool that reads your emails for you by Shaaf Yousaf.</div>
       </div>
-      <div style="width: 30%;">
-        <button type="button" id="checkBtn" class="analyze-btn">
+      <div style="width: 30%;display: flex; flex-direction: column;overflow: hidden;height: fit-content;">
+        <button type="button" id="checkBtn" class="analyze-btn" style="background: rgb(51, 0, 0);">
+          Fetch Emails
+        </button>
+        <button type="button" id="analyzeBtn" class="analyze-btn">
           Analyze Emails
         </button>
       </div>
+      
+      <button type="button" id="setBtn" class="settings-btn">
+          ⚙️
+        </button>
     </div>
     
 
