Improved LLM Query, Refined UI

--- a/index.html
+++ b/index.html
@@ -45,16 +45,8 @@
                 <div class="summary-title">📊 Email Analysis Summary</div>
                 <div class="summary-grid">
                   <div class="summary-item">
-                    <span class="summary-count" id="intercount">nil</span>
-                    <div class="summary-label">Interviews</div>
-                  </div>
-                  <div class="summary-item">
-                    <span class="summary-count" id="offercount">nil</span>
-                    <div class="summary-label">Offers</div>
-                  </div>
-                  <div class="summary-item">
-                    <span class="summary-count" id="rejecount">nil</span>
-                    <div class="summary-label">Rejections</div>
+                    <span class="summary-count" id="updatecount">nil</span>
+                    <div class="summary-label">Updates</div>
                   </div>
                   <div class="summary-item">
                     <span class="summary-count" id="confircount">nil</span>
