--- a/settings.html
+++ b/settings.html
@@ -46,24 +46,20 @@
         <!-- System Information in Sidebar -->
         <div class="sidebar-system-info">
           <div class="system-info-header">
-            <h3 class="system-info-title">System Info</h3>
+            <h3 class="system-info-title">Developer Info</h3>
           </div>
           <div class="system-info-content">
             <div class="system-info-item">
               <span class="system-info-label">Version</span>
-              <span class="system-info-value">1.0.0</span>
+              <span class="system-info-value">0.7.0</span>
             </div>
             <div class="system-info-item">
-              <span class="system-info-label">Updated</span>
-              <span class="system-info-value" id="sidebarLastUpdated">Never</span>
+              <span class="system-info-label">Build</span>
+              <span class="system-info-value">Alpha</span>
             </div>
             <div class="system-info-item">
               <span class="system-info-label">Developer</span>
               <span class="system-info-value">Shaaf Yousaf</span>
-            </div>
-            <div class="system-info-item">
-              <span class="system-info-label">Build</span>
-              <span class="system-info-value">Production</span>
             </div>
           </div>
         </div>
@@ -78,7 +74,6 @@
             <h2 class="section-title">Email Configuration</h2>
             <p class="section-description">Enter your email credentials to connect to your email server</p>
           </div>
-          
           <div class="card">
             <div class="card-content">
               <div class="form-grid">
